--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,74 +1,72 @@
 body {
-    margin:0 auto;
-    background-image: url(../../assets/images/bg-image.png);
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  h2 {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-   }
+  margin:0 auto;
+  background-image: url(../../assets/images/bg-image.png);
+  font-family: Arial, Helvetica, sans-serif;
+}
+h2 {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+ }
 
-   h1.card-title {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-   }
-   a.navbar-brand {
-     font-size:10px;
-   }
+ h1.card-title {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+ }
+ a.navbar-brand {
+   font-size:10px;
+ }
 
+
+ @media (max-width:575.98px) {
+  .card-title {
+    margin-left:20%;
   
-   @media (max-width:575.98px) {
-    .card-title {
-      margin-left:20%;
-    
-    }
-    hr {
-      width:80%;
-    }
+  }
+  hr {
+    width:80%;
+  }
 .img-fluid {
- position: relative;
+position: relative;
+margin-left:60%;
+}
+.navbar-text{
+  margin-left: auto;
+  margin-right:auto;
+}
+
+ ul {
+   margin-right:70px;
  
- margin-left:60%;
-
- 
-}
-   .navbar
-{
- margin-bottom:-8%;
- margin-left:-8%;
- padding:0; 
-
+ }
+ li {
+   padding:0 20px;
+ }
 }
 
-.navbar-text {
-width:100%;
-position:relative;
-text-align: center; 
-font-size:40px;
-margin-top:0px;
-margin-bottom:0px;
-}
-
-
-ul {
- position: relative;
- text-align: center;
- margin-right:49%;
-
-}
-li {  
- padding: 0 5%;
- margin-left:20%;
-}
 
 .card-body {
- width:100%;
- position:relative;
+width:100%;
+position:relative;
 
 
 }
-  
+
 
 .container {
-  position: relative;
-  display:inline-block;
+position: relative;
+display:inline-block;
 
-   }
+ }
+
+ .footer {
+  color: gray;
+  font-size: 8pt;
+  text-align: center;
+  border-top: 8px solid #42A3B9;
+  background-color: #33383E;
+  height:50px;
+  overflow: hidden;
+  left: 0;
+  position: fixed; bottom: 0;
+  bottom: 0;
+  width: 100%;
+} 
+
