--- a/assets/css/stylep.css
+++ b/assets/css/stylep.css
@@ -17,6 +17,11 @@ img {
     margin-left:-28%;
     margin-bottom:20px;
   }
+  .navbar-text{
+    margin-left: auto;
+    margin-right:auto;
+  }
+  
      ul {
        margin-right:70px;
      
