--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,45 @@
+ html {
+  height: 100%;
+  margin: 0;
+}
+
+ #introText {
+   margin-left:300px;
+   margin-top:200px;
+   
+ }
+p {
+  font-size: 22px;
+}
+
 body {
-  margin:0 auto;
-  background-image: url(../../assets/images/bg-image.png);
-  font-family: Arial, Helvetica, sans-serif;
+  margin:0 auto; 
+  font-family: 'Shadows Into Light', cursive;
+  background-image: url( ../../assets/images/website.jpg); 
+  position: relative;
+
+  margin: 0;
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 h2 {
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: 'Shadows Into Light', cursive;
+  color:black;
+  font-size: 50px;
+  box-shadow: 10px 10px 5px lightgrey;
+  margin-left:10px;
+
+  
  }
 
  h1.card-title {
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: 'Shadows Into Light', cursive;
  }
  a.navbar-brand {
-   font-size:10px;
+   font-size:30px;
+   
  }
 
 
@@ -27,23 +55,56 @@ h2 {
 position: relative;
 margin-left:60%;
 }
+
+.navbar {
+  height:30px;
+
+  
+  
+}
 .navbar-text{
   margin-left: auto;
   margin-right:auto;
+ 
+ 
+
+  
+
+  
+  
+}
+.nav-item {
+  color:black;
+ 
 }
 
  ul {
-   margin-right:70px;
+   margin-left:20px;
+  
+   
  
  }
  li {
    padding:0 20px;
+   
+   
  }
 }
 
+/* Darker background on mouse-over */
+.btn:hover {
+  background-color:#ffe8f5;
+  font-family: 'Shadows Into Light', cursive;
+  font-size: x-large;
+  
+}
 
+.fab {
+  color:black;
+ 
+}
 .card-body {
-width:100%;
+width:80%;
 position:relative;
 
 
@@ -51,18 +112,18 @@ position:relative;
 
 
 .container {
-position: relative;
-display:inline-block;
+margin-left:550px;
 
  }
 
  .footer {
-  color: gray;
-  font-size: 8pt;
+   padding-top: 5px;
+ 
+  font-size: 9pt;
   text-align: center;
-  border-top: 8px solid #42A3B9;
-  background-color: #33383E;
-  height:50px;
+  border-top: 1px solid lightgrey;
+  background-color: whitesmoke;
+  height:60px;
   overflow: hidden;
   left: 0;
   position: fixed; bottom: 0;
