--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,8 @@
 
  #introText {
    margin-left:300px;
-   margin-top:200px;
+   margin-top:150px;
+   font-size: 40px;
    
  }
 p {
@@ -30,8 +31,6 @@ h2 {
   font-size: 50px;
   box-shadow: 10px 10px 5px lightgrey;
   margin-left:10px;
-
-  
  }
 
  h1.card-title {
@@ -41,71 +40,71 @@ h2 {
    font-size:30px;
    
  }
+h4 {margin-left:21%;
+    font-size:20px;
+    text-decoration: underline;
+    margin-top:-10%;
+}
+
+#myImg {margin-left: 46%;}
 
 
  @media (max-width:575.98px) {
   .card-title {
-    margin-left:20%;
-  
+    margin-left:35%;
+    margin-top:10%;
+   
   }
+
+
   hr {
     width:80%;
   }
-.img-fluid {
-position: relative;
-margin-left:60%;
+
+
+
+.navbar-text {
+  margin-left:30%;
+} 
+
+#introText {
+  margin-left:5%;
 }
 
-.navbar {
-  height:30px;
+ul {margin-right:100px;}
 
+li {padding:0 20px;}
   
-  
-}
-.navbar-text{
-  margin-left: auto;
-  margin-right:auto;
- 
- 
-
-  
-
-  
-  
-}
-.nav-item {
-  color:black;
- 
+h4 {margin-left:10%;
+  margin-top:-35%;
+  font-size: 20px;
 }
 
- ul {
-   margin-left:20px;
-  
-   
- 
+  #myImg {margin-top:7%;
+        
+          margin-left:40%;
+         
  }
- li {
-   padding:0 20px;
-   
-   
- }
-}
+} /*end of media*/
+
+
 
 /* Darker background on mouse-over */
 .btn:hover {
   background-color:#ffe8f5;
   font-family: 'Shadows Into Light', cursive;
-  font-size: x-large;
+ 
   
 }
 
 .fab {
   color:black;
  
+ 
 }
 .card-body {
 width:80%;
-position:relative;
+
 
 
 }
@@ -117,7 +116,7 @@ margin-left:550px;
  }
 
  .footer {
-   padding-top: 5px;
+   padding-top: 10px;
  
   font-size: 9pt;
   text-align: center;
@@ -130,4 +129,98 @@ margin-left:550px;
   bottom: 0;
   width: 100%;
 } 
+
+#resume {
+  margin-left:70%;
+  font-size: 25px;
+  font-style: oblique;
+  
+}
+
+/* Resume*/
+ #myImg {
+          border-radius: 5px;
+          cursor: pointer;
+          transition: 0.3s;
+        }
+        
+        #myImg:hover {opacity: 0.7;}
+        
+        /* The Modal (background) */
+        .modal {
+          display: none; /* Hidden by default */
+          position: fixed; /* Stay in place */
+          z-index: 1; /* Sit on top */
+          padding-top: 100px; /* Location of the box */
+          left: 0;
+          top: 0;
+          width: 100%; /* Full width */
+          height: 100%; /* Full height */
+          overflow: auto; /* Enable scroll if needed */
+          background-color: rgb(0,0,0); /* Fallback color */
+          background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+        }
+        
+        /* Modal Content (image) */
+        .modal-content {
+          margin: auto;
+          display: block;
+          width: 80%;
+          max-width: 700px;
+        }
+        
+        /* Caption of Modal Image */
+        #caption {
+          margin: auto;
+          display: block;
+          width: 80%;
+          max-width: 700px;
+          text-align: center;
+          color: #ccc;
+          padding: 10px 0;
+          height: 150px;
+        }
+        
+        /* Add Animation */
+        .modal-content, #caption {  
+          -webkit-animation-name: zoom;
+          -webkit-animation-duration: 0.6s;
+          animation-name: zoom;
+          animation-duration: 0.6s;
+        }
+        
+        @-webkit-keyframes zoom {
+          from {-webkit-transform:scale(0)} 
+          to {-webkit-transform:scale(1)}
+        }
+        
+        @keyframes zoom {
+          from {transform:scale(0)} 
+          to {transform:scale(1)}
+        }
+        
+        /* The Close Button */
+        .close {
+          position: absolute;
+          top: 15px;
+          right: 35px;
+          color: #f1f1f1;
+          font-size: 40px;
+          font-weight: bold;
+          transition: 0.3s;
+        }
+        
+        .close:hover,
+        .close:focus {
+          color: #bbb;
+          text-decoration: none;
+          cursor: pointer;
+        }
+        
+        /* 100% Image Width on Smaller Screens */
+        @media only screen and (max-width: 700px){
+          .modal-content {
+            width: 100%;
+          }
+        }
 
