--- a/assets/css/stylec.css
+++ b/assets/css/stylec.css
@@ -1,7 +1,14 @@
-/*Form...*/
-*{
+body {
   margin:0;
+  padding:0;
+
+  background-attachment: scroll;
+  
+  
 }
+
+
+
 /* Styling inputs with type="text", select elements and textareas */
 input[type=text], select, textarea {
 
@@ -31,9 +38,7 @@ input[type=text], select, textarea {
     background-color:#0e706b;;
   }
 
-  .card-body {
-    margin-bottom:10%;
-  }
+ 
   
   /* Adding a background color and some padding around the form */
   .container {
@@ -43,21 +48,20 @@ input[type=text], select, textarea {
     padding: 20px;
     width:100%;
     position: relative; 
+    margin-left:10px;
+    margin-bottom: auto;
+
+
   
   }
 
   @media (max-width:575.98px) {
-    .card-title {
-      text-align: left;
-      margin-left:15%;
-    }
+ 
     hr {
       width: 50%;
-      margin-left:-0.5%;
+      margin-left:25%;
     }
-    .container {
-     margin-right:30%;
-    }
+ 
     .navbar-text{
       margin-left: auto;
       margin-right:auto;
@@ -65,27 +69,20 @@ input[type=text], select, textarea {
     }
     
        ul {
-         margin-right:70px;
+         margin-right:120px;
        
        }
        li {
          padding:0 20px;
        }
      
+     h3 {
+       margin-left:-50%;
+       margin-top:10%;
      }
-
-  
-     .footer {
-      padding-top: 5px;
     
-     font-size: 9pt;
-     text-align: center;
-     border-top: 1px solid lightgrey;
-     background-color: whitesmoke;
-     height:60px;
-     overflow: hidden;
-     left: 0;
-     position: fixed; bottom: 0;
-     bottom: 0;
-     width: 100%;
-   } 
+    .card {
+      margin-top:-100px;  
+    }
+    
+  }
